--- a/frameCalc.html
+++ b/frameCalc.html
@@ -10,6 +10,11 @@
     
     
     // hours;minutes;seconds;frames
+    return false;
+  }
+  
+  function ComputeEnd() {
+   return false;
   }
   
   var fps = 30;
