--- a/frameCalc.html
+++ b/frameCalc.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Frame Time Calculator</title>
-<script src="//code.jquery.com/jquery-2.1.3.min.js" />
+<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
 <script>
   var fps = 30;
   
