--- a/frameCalc.html
+++ b/frameCalc.html
@@ -53,8 +53,10 @@ function Pad2(value) {
     return String("00" + value).slice(-2);
 }
 
+$(function () {
   $("#ComputeDifference").click(ComputeDifference);
   $("#ComputeEnd").click(ComputeEnd);
+});
 </script>
 </head>
 <body>
