--- a/frameCalc.html
+++ b/frameCalc.html
@@ -58,6 +58,11 @@ $(function () {
   $("#ComputeEnd").click(ComputeEnd);
 });
 </script>
+<style>
+  input {
+  left: 50px;
+  }
+</style>
 </head>
 <body>
 Start:
@@ -66,6 +71,7 @@ Start:
 <input type="text" id="frameTimeDiff" />
 <br/>End:
 <input type="text" id="frameTimeEnd" />
+<br/>
 <br/>
 <button id="ComputeDifference">Compute Difference</button>
 <button id="ComputeEnd">Compute End</button>
