--- a/frameCalc.html
+++ b/frameCalc.html
@@ -53,12 +53,14 @@
   }
 
 function Pad2(value) {
-    return String("00" + value).slice(-2);
+  if (IsNaN(value)) {
+    value = 0;
+  }
+    	
+  return String("00" + value).slice(-2);
 }
 
 $(function () {
-  $("#ComputeDifference").click(ComputeDifference);
-  $("#ComputeEnd").click(ComputeEnd);
   $("#framesPerSecond").change(function () {
   	fps = $("#framesPerSecond").val();
   });
@@ -92,10 +94,6 @@ Start:</td><td>
 </td></tr>
 </table>
 <br/>
-<br/>
-  <!--
-<button id="ComputeDifference">Compute Difference</button>
-<button id="ComputeEnd">Compute End</button>
-  -->
+
 </body>
 </html>
