Move files, etc

--- a/frameCalc.html
+++ b/frameCalc.html
@@ -88,7 +88,7 @@ $(function () {
   <br/>
 <table>
   <tr><td>
-PFS:</td><td>
+Frames Per Second:</td><td>
 <input type="text" id="framesPerSecond" value="30" />
 </td></tr>
 <tr><td>
