--- a/_tags/life.html
+++ b/_tags/life.html
@@ -3,3 +3,5 @@ slug: life
 title: Continuous Improvement of Your Life
 permalink: /improve/your/life
 ---
+
+If every day we can find something to improve about our lives, we can constantly be improving our situation and the situations of those around us.
