--- a/_tags/team.html
+++ b/_tags/team.html
@@ -3,3 +3,4 @@ slug: team
 permalink: /improve/your/team
 title: Continuous Improvement of Your Team
 ---
+To do really incredible things, you have to learn to harness the power of teamwork.
