--- a/documents/privacypolicy.html
+++ b/documents/privacypolicy.html
@@ -1,9 +1,9 @@
 <html>
 <body>
     <p><strong>PRIVACY POLICY</strong></p>
-    <p><strong>Last updated November 21, 2018 </strong> </p>
+    <p><strong>Last updated September 18, 2019 </strong> </p>
     <p> </p>
-    <p>Thank you for choosing to be part of our community at Grax.com. We are committed to protecting your personal information and your right to privacy. If you have any questions or concerns about our policy, or our practices with regards to your personal information, please contact us at privacy@grax.com.</p>
+    <p>Thank you for choosing to be part of our community at SecureApplicationLifestyle.com. We are committed to protecting your personal information and your right to privacy. If you have any questions or concerns about our policy, or our practices with regards to your personal information, please contact us at privacy@grax.com.</p>
     <p>When you visit our website, and use our services, you trust us with your personal information. We take your privacy very seriously. In this privacy notice, we describe our privacy policy. We seek to explain to you in the clearest way possible what information we collect, how we use it and what rights you have in relation to it. We hope you take some time to read through it carefully, as it is important. If there are any terms in this privacy policy that you do not agree with, please discontinue use of our Sites and our services.</p>
     <p>This privacy policy applies to all information collected through our website. </p>
     <p><strong>Please read this privacy policy carefully as it will help you make informed decisions about sharing your personal information with us. </strong> </p>
@@ -121,7 +121,7 @@
         <li><strong> DO WE COLLECT INFORMATION FROM MINORS?</strong></li>
     </ol>
     <p><strong><em>In Short: </em></strong><strong> </strong><em>We do not knowingly collect data from or market to children under 18 years of age.</em>  </p>
-    <p>We do not knowingly solicit data from or market to children under 18 years of age. By using the Sites, you represent that you are at least 18 or that you are the parent or guardian of such a minor and consent to such minor dependent&rsquo;s use of the Sites. If we learn that personal information from users less than 18 years of age has been collected, we will deactivate the account and take reasonable measures to promptly delete such data from our records. If you become aware of any data we have collected from children under age 18, please contact us at data-protection@grax.com.  </p>
+    <p>We do not knowingly solicit data from or market to children under 18 years of age. By using the Sites, you represent that you are at least 18 or that you are the parent or guardian of such a minor and consent to such minor dependent&rsquo;s use of the Sites. If we learn that personal information from users less than 18 years of age has been collected, we will deactivate the account and take reasonable measures to promptly delete such data from our records. If you become aware of any data we have collected from children under age 18, please contact us at data-protection@secureapplicationlifestyle.com.  </p>
     <p> </p>
     <ol start="10">
         <li><strong> WHAT ARE YOUR PRIVACY RIGHTS?</strong></li>
@@ -158,9 +158,9 @@
     <ol start="14">
         <li><strong> HOW CAN YOU CONTACT US ABOUT THIS POLICY?</strong></li>
     </ol>
-    <p>If you have questions or comments about this policy, you may contact our Data Protection Officer (DPO), David Walker, by email at data-protection@grax.com, by phone at (321) 345-6072.</p>
+    <p>If you have questions or comments about this policy, you may contact our Data Protection Officer (DPO), David Walker, by email at data-protection@secureapplicationlifestyle.com, by phone at (321) 345-6072.</p>
     <p> </p>
-    <p>If you have any further questions or comments about us or our policies, email us at privacy@grax.com.</p>
+    <p>If you have any further questions or comments about us or our policies, email us at privacy@secureapplicationlifestyle.com.</p>
     <p> </p>
 </body>
 </html>
