--- a/documents/privacypolicy.html
+++ b/documents/privacypolicy.html
@@ -3,7 +3,7 @@
     <p><strong>PRIVACY POLICY</strong></p>
     <p><strong>Last updated September 18, 2019 </strong> </p>
     <p> </p>
-    <p>Thank you for choosing to be part of our community at SecureApplicationLifestyle.com. We are committed to protecting your personal information and your right to privacy. If you have any questions or concerns about our policy, or our practices with regards to your personal information, please contact us at privacy@grax.com.</p>
+    <p>Thank you for choosing to be part of our community at SecureApplicationLifestyle.com. We are committed to protecting your personal information and your right to privacy. If you have any questions or concerns about our policy, or our practices with regards to your personal information, please contact us at privacy@grax32.com.</p>
     <p>When you visit our website, and use our services, you trust us with your personal information. We take your privacy very seriously. In this privacy notice, we describe our privacy policy. We seek to explain to you in the clearest way possible what information we collect, how we use it and what rights you have in relation to it. We hope you take some time to read through it carefully, as it is important. If there are any terms in this privacy policy that you do not agree with, please discontinue use of our Sites and our services.</p>
     <p>This privacy policy applies to all information collected through our website. </p>
     <p><strong>Please read this privacy policy carefully as it will help you make informed decisions about sharing your personal information with us. </strong> </p>
